--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,8 @@
+DOMAIN_NAME=dcavalei.42.fr
+
 # MYSQL SETUP
 MYSQL_WP_NAME=wordpressdb
 MYSQL_ROOT_PASSWORD=rootpassword123
 MYSQL_USER=dcavalei
 MYSQL_PASSWORD=password123
+
