--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y \
 
 EXPOSE 3306
 
-# make sure that 'docker-entrypoint.sh' is executable aka: chmod +x docker-entrypoint.sh
+# make sure that '  is executable aka: chmod +x docker-entrypoint.sh
 COPY docker-entrypoint.sh /usr/local/bin/
 
 CMD docker-entrypoint.sh
