--- a/srcs/nginx/tools/wordpress.conf
+++ b/srcs/nginx/tools/wordpress.conf
@@ -2,7 +2,7 @@ server {
 
 	listen 443 ssl;
 	listen [::]:443 ssl;
-	server_name localhost $DOMAIN_NAME;
+	server_name $DOMAIN_NAME;
 
 	ssl on;
 	ssl_certificate /etc/ssl/nginx-selfsigned.crt;
@@ -11,7 +11,7 @@ server {
 	root /var/www/wordpress;
 	autoindex off;
 
-	index index.html index.htm index.nginx-debian.html index.php;
+	index index.html index.php;
 
 
 	location / {
