--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Dockerfile                                         :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: dcavalei <dcavalei@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/01/13 14:00:47 by dcavalei          #+#    #+#              #
+#    Updated: 2022/01/14 09:44:19 by dcavalei         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 FROM debian:buster
 
 RUN apt-get update && apt-get install -y \
@@ -11,4 +23,4 @@ COPY tools/docker-entrypoint.sh /usr/local/bin/
 # make sure that 'docker-entrypoint.sh' is executable aka: chmod +x docker-entrypoint.sh
 ENTRYPOINT [ "docker-entrypoint.sh" ]
 
-CMD [ "nginx" ]
+CMD [ "nginx", "-g", "daemon off;" ]
