--- a/srcs/nginx/tools/wordpress.conf
+++ b/srcs/nginx/tools/wordpress.conf
@@ -5,14 +5,14 @@ server {
 	server_name $DOMAIN_NAME;
 
 	ssl on;
+	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/ssl/nginx-selfsigned.crt;
 	ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
 
-	root /var/www/wordpress;
+	root /var/www/html;
 	autoindex off;
 
 	index index.html index.php;
-
 
 	location / {
 		try_files $uri $uri/ =404;
