small fix + vscode git extension test

--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -6,7 +6,7 @@
 #    By: dcavalei <dcavalei@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/13 22:11:50 by kmeeseek          #+#    #+#              #
-#    Updated: 2022/01/14 14:01:51 by dcavalei         ###   ########.fr        #
+#    Updated: 2022/01/14 22:54:07 by dcavalei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,6 +26,10 @@ RUN apt-get update && apt-get install -y \
 	mariadb-client \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& mkdir /run/php
+
+RUN wget https://wordpress.org/wordpress-5.8.3.tar.gz \
+	&& tar -xvzf wordpress-5.8.3.tar.gz \
+	&& rm -rf wordpress-5.8.3.tar.gz
 
 COPY tools/docker-entrypoint.sh /usr/local/bin/
 COPY tools/wp-config.php /
